--- a/app/src/main/res/layout/activity_senior_anim.xml
+++ b/app/src/main/res/layout/activity_senior_anim.xml
@@ -3,4 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/iv_three_line_anim"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:onClick="startThreeLineAnim"
+        android:src="@drawable/three_line_rotation"/>
 </RelativeLayout>
