--- a/app/src/main/res/layout/activity_senior_anim.xml
+++ b/app/src/main/res/layout/activity_senior_anim.xml
@@ -3,10 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_three_line_anim"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:onClick="startThreeLineAnim"
-        android:src="@drawable/three_line_rotation"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/iv_three_line_anim"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/svg_three_line_rotation"/>
+
+            <ImageView
+                android:id="@+id/iv_anim2"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/svg_anim2"/>
+        </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
